# CS_TAU_CPP_Ex_2

./: AutoPlayerAlgorithm.cpp  AutoPlayerAlgorithm.h  AutoPlayerAlogrithm.cpp  AutoPlayerAlogrithm.h  Auxiliary.cpp  Auxiliary.h  Board.cpp  Board.h  BoardIO.cpp  BoardIO.h  CMakeLists.txt  Classes.cpp  Classes.h  FightInfo.h  FilePlayerAlgorithm.cpp  FilePlayerAlgorithm.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameManager.cpp  GameManager.h  GamePiece.cpp  GamePiece.h  JokerChange.h  Move.h  MyBoard.cpp  MyBoard.h  MyFightInfo.cpp  MyFightInfo.h  MyJokerChange.cpp  MyJokerChange.h  MyMove.cpp  MyMove.h  MyPiecePosition.cpp  MyPiecePosition.h  MyPlayerAlgorithm.cpp  MyPlayerAlgorithm.h  MyPoint.cpp  MyPoint.h  (+10 more)
